tests/test_files/valid_files_semantic/continue.c
int main() {
    while (1) {
        continue;  // agora está dentro de um laço
    }
    return 42;
}
