tests/test_files/invalid_files_sintatic/no_return_type.c
main() {     // ❌ faltou “int” (ou outro tipo) antes de main
    return 0;
}
